# site-monitor

./: .gitignore  pyproject.toml  samconfig.toml  template.yaml
Documents/: API-DESIGN.md  API-SPEC.md  COST-ESTIMATE.md  DESIGN.md  E2E-TEST-REPORT.md  FRONTEND-DESIGN.md  IMPLEMENTATION-PLAN.md  INFRA-DESIGN.md  OPERATION.md  SECURITY-DESIGN.md
Documents/files/: 料金見積.xlsx
Documents/images/: gen_architecture.py
frontend/: .env.example  .env.production  .gitignore  package-lock.json  package.json
frontend/src/: env.d.ts  main.ts
frontend/src/components/: AppLayout.vue
frontend/src/config/: amplify.ts
frontend/src/data/: mock-data.ts
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  sites.ts
frontend/src/views/: AdminUsersView.vue  DashboardView.vue  (+5 more)
functions/api/: app.py
functions/checker/: app.py  checker.py  http_client.py  ssrf.py
functions/cognito_trigger/: app.py
functions/cw_checker/: app.py  insights.py
functions/notifier/: app.py  email_sender.py  slack_sender.py
openapi/: openapi.yaml
scripts/: generate-env.sh
stacks/api/: template.yaml
stacks/auth/: template.yaml
stacks/checker/: template.yaml
stacks/cw_checker/: template.yaml
stacks/database/: template.yaml
stacks/notifier/: template.yaml
stacks/queue/: template.yaml
stacks/ses/: samconfig.toml  template.yaml
stacks/web/: template.yaml
tests/e2e/: run-e2e.js
tests/infra/: conftest.py  test_template_lint.py  test_template_resources.py
tests/unit/: test_cognito_trigger.py
(+27 files in other folders)
