[project]
name = "web-alive-monitoring"
version = "0.1.0"
description = "IoT Web Alive Monitoring System"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "cfn-lint>=1.0",
    "moto[dynamodb,sqs,ses,cognitoidp]>=5.0",
    "boto3>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["functions"]
